feat: list all user players
