# src/routes/player.routes.js
@@ -7,6 +7,7 @@ const playerMulterConfig = require('../config/PlayerMulterConfig');
 const CreatePlayerController = require('../controllers/player/CreatePlayerController');
 const FindPlayerByIdController = require('../controllers/player/FindPlayerByIdController');
 const ListAllPlayersController = require('../controllers/player/ListAllPlayersController');
+const FindAllPlayersFromUserController = require('../controllers/player/FindAllPlayersFromUserController');
 
 routes.post('/register',
   userAuth,
@@ -22,6 +23,11 @@ routes.get('/find/:id',
 routes.get('/list',
   userAuth,
   ListAllPlayersController
+);
+
+routes.get('/allplayers',
+  userAuth,
+  FindAllPlayersFromUserController
 );
 
 module.exports = routes;
